force-app/main/default/objects/vf_ReengagementRecommendation__c/vf_ReengagementRecommendation__c.object-meta.xml
<CustomObject>
    <label>Reengagement Recommendation</label>
    <pluralLabel>Reengagement Recommendations</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Recommendation Number</label>
        <displayFormat>REC-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Object to store volunteer reengagement recommendations</description>
</CustomObject>