force-app/main/default/objects/vf_ReengagementRecommendation__c/fields/Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date__c</fullName>
    <label>Creation Date</label>
    <type>Date</type>
    <description>Date the recommendation was created</description>
    <inlineHelpText>The date when this reengagement recommendation was created</inlineHelpText>
</CustomField>