force-app/main/default/objects/vf_ReengagementRecommendation__c/fields/Strategies__c.field-meta.xml
<CustomField>
    <fullName>Strategies__c</fullName>
    <label>Strategies</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>JSON array of recommended reengagement strategies</description>
    <inlineHelpText>List of recommended strategies to reengage the volunteer. Stored in JSON format.</inlineHelpText>
</CustomField>