force-app/main/default/objects/vf_ReengagementRecommendation__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <label>Volunteer</label>
    <referenceTo>vf_Volunteer__c</referenceTo>
    <relationshipLabel>Reengagement Recommendations</relationshipLabel>
    <relationshipName>Reengagement_Recommendations</relationshipName>
    <type>Lookup</type>
    <description>Volunteer the recommendation is for</description>
    <inlineHelpText>The volunteer this reengagement recommendation is for</inlineHelpText>
</CustomField>